# splendor_ground0

./: .gitignore  AGENT_HANDOFF.md  README.md  pyproject.toml  run_benchmark.py  run_gui.py  run_improve_replay_actions.py  run_replay_corpus.py  run_supervised.py
configs/: defaults.toml
docs/: architecture.md  component_data_provenance.md  environment_spec.md  windows_cuda_setup.md
scripts/: bootstrap_windows_cuda.ps1  create_handoff_archive.ps1  verify_training_env.py
src/splendor_ai/: __init__.py  diagnostics.py  gui.py
src/splendor_ai/bots/: __init__.py  base.py  heuristic_bot.py  model_bot.py  random_bot.py  search_bot.py
src/splendor_ai/encoding/: __init__.py  action_codec.py  observation.py
src/splendor_ai/engine/: __init__.py  actions.py  constants.py  data.py  env.py  state.py
src/splendor_ai/eval/: __init__.py  match.py  run_benchmark.py
src/splendor_ai/training/: __init__.py  corpus.py  dataset.py  device.py  improve_replay_actions.py  model.py  replay.py  run_replay_corpus.py  run_supervised.py  supervised.py
tests/: test_action_codec.py  test_bots_and_eval.py  test_env_scaffold.py  test_improve_replay_actions.py  test_legal_actions.py  test_model_bot.py  test_observation.py  test_observation_tensor.py  test_replay_corpus.py  test_replay_export.py  test_replays.py  test_run_benchmark.py  test_run_replay_corpus_cli.py  test_run_supervised_cli.py  test_step_transitions.py  test_supervised_training.py  test_training_backend.py
